--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <title>Frontend Mentor | NFT preview card component</title>
 
 </head>
-
-<body>
-  <div class="container">
+  
+  <body>
+<main>
+    <div class="container">
 
     <article class="nft-pic">
-      <img src="/images/image-equilibrium.jpg" alt="">
+      <img src="images/image-equilibrium.jpg" alt="">
       <div class="overlay">      <img src="/images/icon-view.svg" alt="">      </div>
       
     </article>
@@ -27,8 +28,8 @@
 
 
     <ul class="container-img">
-      <li> <img src="/images/icon-ethereum.svg" alt=""> 0.041 ETH</li>
-      <li> <img src="/images/icon-clock.svg" alt=""> 3 days left</li>
+      <li> <img src="images/icon-ethereum.svg" alt=""> 0.041 ETH</li>
+      <li> <img src="images/icon-clock.svg" alt=""> 3 days left</li>
     </ul>
 
     <hr>
@@ -38,10 +39,14 @@
     </article>
 
   </div>
+  </main>
+    
+    <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.instagram.com/aarusht_t/" target="_blank">Aarush Sharma</a>.
   </div>
+    </footer>
 </body>
 
 </html>
