--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <hr>
     <article class="ending">
-      <p><img src="/images/image-avatar.png" alt=""> Creation of <span>Jules Wyvern</span> </p>
+      <p><img src="images/image-avatar.png" alt=""> Creation of <span>Jules Wyvern</span> </p>
 
     </article>
 
