--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <article class="nft-pic">
       <img src="images/image-equilibrium.jpg" alt="">
-      <div class="overlay">      <img src="/images/icon-view.svg" alt="">      </div>
-      
+      <div class="overlay">      <img src="images/icon-view.svg" alt="">      </div>
     </article>
+      
     <h1> Equilibrium #3429 </h1>
 
     <p> Our Equilibrium collection promotes balance and calm.</p>
